--- a/goodbye.html
+++ b/goodbye.html
@@ -2,6 +2,7 @@
 <h2>A program to bid our friends farewell all over the world.</h2>
 <ul>
   <li>English: Goodbye, friends!</li>
-    <li> Spanish: Adios, amigos!</li>
-  </ul>
-  
+  <li> Spanish: Adios, amigos!</li>
+  <li>Japanese: Sianora, senpai!</li>
+  <li>Italian: Arrivedeci, spaghetti!</li>
+</ul>
